--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -29,7 +29,7 @@
         <field name="inherit_id" ref="purchase.purchase_order_view_search"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
-                <field string="Barcode" name="multi_uom_price_barcode"/>
+                <field string="Barcodes" name="purchase_multi_uom_barcode"/>
             </xpath>
         </field>
     </record>
