--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -23,13 +23,13 @@
             </field>
         </record>
 
-    <record id="purchase_order_line_search_view_inherit" model="ir.ui.view">
-        <field name="name">purchase.order.line.search.inherit</field>
-        <field name="model">purchase.order.line</field>
-        <field name="inherit_id" ref="purchase.purchase_order_view_search"/>
+     <record id="product_template_search_view_inherit" model="ir.ui.view">
+        <field name="name">product.template.search.inherit</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_search_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='product_id']" position="after">
-                <field string="Barcodes" name="multi_uom_price_barcode"/>
+            <xpath expr="//search" position="inside">
+                <field name="barcode_search" string="Barcodes" filter_domain="[('multi_uom_price_id.barcode', 'ilike', self)]"/>
             </xpath>
         </field>
     </record>
