--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -17,22 +17,13 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_search_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='categ_id']" position="after">
+                <xpath expr="//field[@name='barcode']" position="after">
                     <field string="barcodes" name="multi_uom_price_barcode"/>
                 </xpath>
             </field>
         </record>
 
-     <record id="product_template_search_view_inherit" model="ir.ui.view">
-        <field name="name">product.template.search.inherit</field>
-        <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_search_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//search" position="inside">
-                <filter string="Search by Barcode" name="search_by_barcode" domain="[]"/>
-            </xpath>
-        </field>
-    </record>
+
 
 
     <!-- New Tree View for product.multi.uom.price -->
