--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -24,8 +24,8 @@
         </record>-->
     <record id="product_product_tree_view_inherit2" model="ir.ui.view">
             <field name="name">product.product.tree.inherit.multi.uom</field>
-            <field name="model">product.product</field>
-            <field name="inherit_id" ref="product.product_product_tree_view"/>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_tree_view"/>
             <field name="arch" type="xml">
                 <!-- Use xpath to locate the position after the 'name' field -->
                 <xpath expr="//field[@name='name']" position="after">
