--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -23,7 +23,16 @@
             </field>
         </record>
 
-
+    <record id="purchase_order_search_view" model="ir.ui.view">
+    <field name="name">purchase.order.search</field>
+    <field name="model">purchase.order</field>
+    <field name="inherit_id" ref="purchase.purchase_order_view_search"/>
+    <field name="arch" type="xml">
+        <xpath expr="//field[@name='order_date']" position="after">
+            <field name="product_barcode" string="Barcode"/>
+        </xpath>
+    </field>
+</record>
 
 
     <!-- New Tree View for product.multi.uom.price -->
