--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -26,7 +26,7 @@
    <record id="purchase_order_search_view_inherit" model="ir.ui.view">
         <field name="name">purchase.order.search.inherit</field>
         <field name="model">purchase.order</field>
-        <field name="inherit_id" ref="your_module.purchase_order_view_search"/> <!-- Use the actual XML ID of the view to inherit -->
+        <field name="inherit_id" ref="purchase.purchase_order_view_search"/> <!-- Use the actual XML ID of the view to inherit -->
         <field name="arch" type="xml">
             <!-- Add a barcode search field before or after a known field -->
             <xpath expr="//filter[@name='order_date']" position="after">
