--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -4,6 +4,10 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='default_code']" position="after">
+					<field name="company_barcode_id" invisible="1"/>
+					<field name="multi_barcode_for_product" invisible="1"/>
+				</xpath>
              <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
                  <field name="barcode"/>
                   <field name="product_variant_id" column_invisible="1"/>
@@ -23,17 +27,7 @@
             </field>
         </record>
 
-   <record id="purchase_order_search_view_inherit" model="ir.ui.view">
-        <field name="name">purchase.order.search.inherit</field>
-        <field name="model">purchase.order</field>
-        <field name="inherit_id" ref="purchase.purchase_order_view_search"/> <!-- Use the actual XML ID of the view to inherit -->
-        <field name="arch" type="xml">
-            <!-- Add a barcode search field before or after a known field -->
-            <xpath expr="//filter[@name='order_date']" position="after">
-                <filter name="barcode" string="Barcode" domain="[('product_id.product_tmpl_id.multi_uom_price_barcode', 'ilike', self)]"/>
-            </xpath>
-        </field>
-    </record>
+
 
 
     <!-- New Tree View for product.multi.uom.price -->
