--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -27,7 +27,27 @@
             </field>
         </record>
 
+    <record id="view_product_template_inherit_search" model="ir.ui.view">
+		  <field name="name">product.template.search.expand</field>
+		  <field name="model">product.template</field>
+		  <field name="inherit_id" ref="product.product_template_search_view"/>
+		  <field name="arch" type="xml">
+			<field name="name" position="attributes">
+				<attribute name="filter_domain">['|', '|', '|','|', ('default_code', 'ilike', self), ('product_variant_ids.default_code', 'ilike', self),('name', 'ilike', self), ('barcode', 'ilike', self),('multi_uom_price_id.barcode', 'ilike', self)]</attribute>
+			</field>
+		  </field>
+		</record>
 
+		<record id="view_product_product_inherit_search" model="ir.ui.view">
+		  <field name="name">product.product.search.expand</field>
+		  <field name="model">product.product</field>
+		  <field name="inherit_id" ref="product.product_search_form_view"/>
+		  <field name="arch" type="xml">
+			<field name="name" position="attributes">
+				<attribute name="filter_domain">['|', '|','|', ('default_code', 'ilike', self), ('name', 'ilike', self), ('barcode', 'ilike', self),('multi_uom_price_id.barcode', 'ilike', self)]</attribute>
+			</field>
+		  </field>
+		</record>
 
 
     <!-- New Tree View for product.multi.uom.price -->
