--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -58,7 +58,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//notebook/page/field[@name='order_line']/tree/field[@name='product_template_id']"
                         position="replace">
-                    <field name="product_template_id"
+                    <field name="product_id"
                         string="Product"
                         optional="show"
                         invisible="0"
