--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -51,6 +51,8 @@
 			</field>
 		  </field>
 		</record>
+
+    
 <record id="bi_sale_order_inherited_form_view" model="ir.ui.view">
             <field name="name">sale.order.inherited.form.view</field>
             <field name="model">sale.order</field>
@@ -58,7 +60,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//notebook/page/field[@name='order_line']/tree/field[@name='product_template_id']"
                         position="replace">
-                    <field name="product_id"
+                    <field name="product_template_id"
                         string="Product"
                         optional="show"
                         invisible="0"
