--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -44,9 +44,9 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//notebook/page/field[@name='order_line']/tree/field[@name='product_template_id']"
+                <xpath expr="//notebook/page/field[@name='order_line']/tree/field[@name='product_id']"
                         position="replace">
-                    <field name="product_template_id"
+                    <field name="product_id"
                         string="Product"
                         optional="show"
                         invisible="0"
