--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -4,14 +4,47 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
+
              <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
-                 <field name="barcode"/>
+                 <field name="product_product_id" column_invisible="1" context="{'default_product_tmpl_id': parent.id,}"/>
+                 <field name="product_id" column_invisible="1"/>
+                 <field name="barcode" context="{'search_by_vat': True}"/>
                   <field name="product_variant_id" column_invisible="1"/>
+                 <field name="model_ids" column_invisible = 'parent.multi_barcode_for_product == False'/>
             </xpath>
           
         </field>
     </record>
+    <record id="product_template_barcode_form_view_inherit" model="ir.ui.view">
+			<field name="name">product.template.form.view.inherite</field>
+			<field name="model">product.template</field>
+			<field name="inherit_id" ref="product.product_template_only_form_view"/>
+			<field name="arch" type="xml">
+				<xpath expr="//field[@name='default_code']" position="after">
+					<field name="company_barcode_id" invisible="1"/>
+					<field name="multi_barcode_for_product" invisible="1"/>
+				</xpath>
+			</field>
+		</record>
 
+    <record id="view_product_product_form_inherit" model="ir.ui.view">
+			<field name="name">product.product.form.extended</field>
+			<field name="model">product.product</field>
+			<field name="inherit_id" ref="product.product_normal_form_view"/>
+			<field name="arch" type="xml">
+				<xpath expr="//field[@name='default_code']" position="after">
+					<field name="company_barcode_id" invisible="1"/>
+					<field name="multi_barcode_for_product" invisible="1"/>
+				</xpath>
+				    <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
+                 <field name="product_product_id" column_invisible="1" context="{'default_product_tmpl_id': parent.id,}"/>
+                 <field name="product_id" column_invisible="1"/>
+                 <field name="barcode" context="{'search_by_vat': True}"/>
+                  <field name="product_variant_id" column_invisible="1"/>
+                 <field name="model_ids" column_invisible = 'parent.multi_barcode_for_product == False'/>
+            </xpath>
+			</field>
+		</record>
 
 
     <!-- Scan to find product by barcode        -->
@@ -39,7 +72,7 @@
 
     </record>
 
-    <record id="bi_sale_order_inherited_form_view" model="ir.ui.view">
+   <record id="bi_sale_order_inherited_form_view" model="ir.ui.view">
             <field name="name">sale.order.inherited.form.view</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
