--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -6,11 +6,8 @@
         <field name="arch" type="xml">
 
              <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
-                 <field name="product_product_id" column_invisible="1" context="{'default_product_tmpl_id': parent.id,}"/>
-                 <field name="product_id" column_invisible="1"/>
                  <field name="barcode" context="{'search_by_vat': True}"/>
                   <field name="product_variant_id" column_invisible="1"/>
-                 <field name="model_ids" column_invisible = 'parent.multi_barcode_for_product == False'/>
             </xpath>
           
         </field>
@@ -24,6 +21,13 @@
 					<field name="company_barcode_id" invisible="1"/>
 					<field name="multi_barcode_for_product" invisible="1"/>
 				</xpath>
+                <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
+                 <field name="product_product_id" column_invisible="1" context="{'default_product_tmpl_id': parent.id,}"/>
+                 <field name="product_id" column_invisible="1"/>
+                 <field name="barcode" context="{'search_by_vat': True}"/>
+                  <field name="product_variant_id" column_invisible="1"/>
+                 <field name="model_ids" column_invisible = 'parent.multi_barcode_for_product == False'/>
+            </xpath>
 			</field>
 		</record>
 
