--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -13,16 +13,14 @@
         </field>
     </record>
 
-    <record id="view_sales_order_filter_inherit" model="ir.ui.view">
-        <field name="name">sale.order.filter.inherit</field>
+    
+    <record id="view_order_filter" model="ir.ui.view">
+        <field name="name">sale.order.filter</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="module_name.view_sales_order_filter"/> <!-- Change 'module_name' to the actual module name -->
+        <field name="inherit_id" ref="sale.view_sale_order_filter"/>
         <field name="arch" type="xml">
-            <xpath expr="//search" position="inside">
-                <field name="order_line.product_id" string="Product"
-                    filter_domain="[('order_line.product_id.name', 'ilike', self)]"/>
+            <xpath expr="//filter[@name='filter_order_date']" position="before">
                 <filter string="Barcode" name="filter_barcode" domain="[('order_line.multi_uom_price_barcode', 'ilike', self)]"/>
-                <!-- Add additional filters if needed -->
             </xpath>
         </field>
     </record>
