--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -13,21 +13,13 @@
         </field>
     </record>
 
-<record id="view_sales_order_filter_inherit" model="ir.ui.view">
-        <field name="name">sale.order.filter.inherit</field>
+<record id="view_order_filter" model="ir.ui.view">
+        <field name="name">sale.order.filter</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_sale_order_filter"/> <!-- Ensure this reference is correct -->
+        <field name="inherit_id" ref="sale.view_sale_order_filter"/>
         <field name="arch" type="xml">
-          <xpath expr="//search" position="inside">
-                <!-- Existing filters -->
-                <filter string="Order" name="filter_order"
-                    domain="['|', '|', ('name', 'ilike', self), ('client_order_ref', 'ilike', self), ('partner_id', 'child_of', self)]"/>
-
-                <!-- New filters -->
-                <filter string="Product Name" name="filter_product_name"
-                    domain="[('order_line.product_id.name', 'ilike', self)]"/>
-                <filter string="Product Barcode" name="filter_product_barcode"
-                    domain="[('order_line.product_id.multi_uom_price_id.barcode', 'ilike', self)]"/>
+            <xpath expr="//filter[@name='order_month']" position="before">
+                <filter string="Barcode" name="filter_barcode" domain="[('order_line.multi_uom_price_barcode', 'ilike', self)]"/>
             </xpath>
         </field>
     </record>
