--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -36,7 +36,7 @@
                              'company_id': parent.company_id,
                              'default_list_price': price_unit,
                              'default_description_sale': name,
-                             'multi_uom_price_barcode': order_line.product_id.multi_uom_price_barcode
+                             'multi_uom_price_barcode': product_id.multi_uom_price_barcode
                          }"
                         options="{
                              'no_open': True,
