--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -18,7 +18,7 @@
     <field name="model">sale.order</field>
     <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
-        <xpath expr="//field[@name='order_line']/tree" position="befor">
+        <xpath expr="//field[@name='order_line']/tree" position="before">
             <field name="barcode" placeholder="Enter barcode"/>
         </xpath>
     </field>
