--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -18,7 +18,18 @@
     <field name="model">sale.order</field>
     <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
-        <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="before">
+        <xpath expr="//field[@name='order_line']/tree/field[@name='product_template_id']" position="before">
+            <field name="barcode" placeholder="Enter barcode"/>
+        </xpath>
+    </field>
+</record>
+
+    <record id="view_order_form_inherit" model="ir.ui.view">
+    <field name="name">sale.order.form.inherit</field>
+    <field name="model">sale.order</field>
+    <field name="inherit_id" ref="Purchase.purchase_order_form"/>
+    <field name="arch" type="xml">
+        <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="before">
             <field name="barcode" placeholder="Enter barcode"/>
         </xpath>
     </field>
