--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -4,9 +4,8 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
-
              <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
-                 <field name="barcode" context="{'search_by_vat': True}"/>
+                 <field name="barcode"/>
                   <field name="product_variant_id" column_invisible="1"/>
             </xpath>
           
