--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -58,7 +58,7 @@
                     <div dir="ltr">
                         <div class="page row">
                             <div class="col-8">
-                                <table style="margin-top:5px;" class="main_table second_table" width="100%">
+                                <table style="margin-top:5px; text-align: left;" class="main_table second_table" width="100%">
                                     <col style="width:15%"/>
                                     <col style="width:15%"/>
                                     <col style="width:15%"/>
