--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -25,7 +25,6 @@
         text-align: left; /* Align the container to the left */
     }
 </style>
-
                     <t t-if="doc.debit_origin_id">
                         <t t-set="invoice_type" t-value="'Debit Note'"/>
                         <t t-set="invoice_type_ar" t-value="'اشعار ﻣﺪﻳﻦ'"/>
@@ -64,11 +63,11 @@
                     </h2>
                     <div dir="ltr">
                         <div class="page row">
-                            <div class="col-8">
-                                <table style="margin-top:5px;" class="main_table second_table" width="100%">
-                                    <col style="width:5%"/>
-                                    <col style="width:5%"/>
-                                    <col style="width:5%"/>
+                            <div class="col-8 table-container">
+                                <table  class="main_table second_table" width="100%">
+                                    <col style="width:15%"/>
+                                    <col style="width:15%"/>
+                                    <col style="width:15%"/>
                                     <!--<tr>
                                         <td class="second_table left_column">
                                             <span>
