--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -5,27 +5,20 @@
             <t t-foreach="docs" t-as="doc">
                 <t t-call="web.external_layout">
                     <style>
-    .head { margin-top: 0; }
-    .lable_bold { font-weight: bold; }
-    .main_table td:nth-child(1) { white-space: nowrap; }
-    .main_table td:nth-child(3) { white-space: nowrap; }
-    .left_column { text-align: left; }
-    .total_table { white-space: nowrap; }
-    .right_column { text-align: right; }
-    .second_table {
-        padding: 2px;
-        border: 1px solid black;
-        border-collapse: collapse;
-        font-size: 11px;
-        /* Ensure the table is aligned to the left */
-        margin: 0; /* Reset any margin that might center it */
-        text-align: left; /* Align content inside the table to the left */
-    }
-    .table-container {
-        text-align: left; /* Align the container to the left */
-    }
-</style>
-
+                        .head{ margin-top: 0; }
+                        .lable_bold { font-weight: bold; }
+                        .main_table td:nth-child(1) {white-space: nowrap;}
+                        .main_table td:nth-child(3) {white-space: nowrap;}
+                        .left_column {text-align:left;}
+                        .total_table {white-space: nowrap;}
+                        .right_column {text-align:right;}
+                        .second_table {
+                        padding: 2px;
+                        border: 1px solid black;
+                        border-collapse: collapse;
+                        font-size:11px;
+                        }
+                    </style>
                     <t t-if="doc.debit_origin_id">
                         <t t-set="invoice_type" t-value="'Debit Note'"/>
                         <t t-set="invoice_type_ar" t-value="'اشعار ﻣﺪﻳﻦ'"/>
@@ -55,20 +48,23 @@
                        t-value="doc.partner_id.buyer_identification if doc.l10n_is_self_billed_invoice else doc.company_id.license"/>
                     <t t-set="license_no"
                        t-value="doc.partner_id.buyer_identification_no if doc.l10n_is_self_billed_invoice else doc.company_id.license_no"/>
-
+<div class="col-4">
+                                <img style="text-align:center;width:200px;max-height:200px;float:right;margin-top:-10px;padding-top:0px;"
+                                     alt="Barcode" t-att-src="doc.get_qrcode()"/>
+                            </div>
                     <h3 style="text-align:center;">
                         <t t-esc="invoice_type_ar"/>
                     </h3>
                     <h2 style="text-align:center;">
                         <t t-esc="invoice_type"/>
                     </h2>
-
+                    <div dir="ltr">
                         <div class="page row">
-                            <div class="col-8 table-container">
-                                <table  class="main_table second_table" width="100%">
-                                    <col style="width:10%"/>
-                                    <col style="width:5%"/>
-                                    <col style="width:10%"/>
+                            <div class="col-8">
+                                <table style="margin-top:5px;" class="main_table second_table" width="100%">
+                                    <col style="width:15%"/>
+                                    <col style="width:50%"/>
+                                    <col style="width:15%"/>
                                     <!--<tr>
                                         <td class="second_table left_column">
                                             <span>
@@ -219,12 +215,8 @@
                                     </tr>
                                 </table>
                             </div>
-                            <div class="col-4">
-                                <img style="text-align:right;width:150px;max-height:150px;float:right;margin-top:-10px;padding-top:0px;"
-                                     alt="Barcode" t-att-src="doc.get_qrcode()"/>
-                            </div>
+                            
                         </div>
-                    <div dir="ltr">
                         <table style="margin-top:5px;" width="100%">
                             <col style="width:11%"/>
                             <col style="width:18%"/>
