--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -614,11 +614,11 @@
                                         <span class="lable_bold">بائع آخر</span>
                                     </td>
                                 </t>
-                            </tr>
+                            </tr>-->
                             <tr>
                                 <td class="second_table left_column">
                                     <span>
-                                        <b>Other Seller ID</b>
+                                        <b>CRN</b>
                                     </span>
                                 </td>
                                 <td class="second_table">
@@ -627,12 +627,12 @@
                                     </span>
                                 </td>
                                 <td class="second_table" style="text-align:right;">
-                                    <span class="lable_bold">اي دي البائع الآخر</span>
+                                    <span class="lable_bold">رقم السجل التجاري</span>
                                 </td>
                                 <t t-if="buyer_identification_no">
                                     <td class="second_table left_column">
                                         <span>
-                                            <b>Other Buyer ID</b>
+                                            <b>CRN</b>
                                         </span>
                                     </td>
                                     <td class="second_table">
@@ -641,10 +641,10 @@
                                         </span>
                                     </td>
                                     <td class="second_table" style="text-align:right;">
-                                        <span class="lable_bold">معرف آخر</span>
+                                        <span class="lable_bold">رقم السجل التجاري</span>
                                     </td>
                                 </t>
-                            </tr>-->
+                            </tr>
                         </table>
 
                         <t t-if="not doc._is_downpayment()"
