--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -480,7 +480,7 @@
                                 <t t-elif="conf_partner['state_id_name']['value']">
                                     <td colspan="3"/>
                                 </t>
-                                <t t-if="conf_partner['state_id_name']['value']">
+                                <!--<t t-if="conf_partner['state_id_name']['value']">
                                     <td class="second_table left_column">
                                         <span>
                                             <b>State</b>
@@ -494,7 +494,7 @@
                                     <td class="second_table" style="text-align:right;">
                                         <span class="lable_bold">الحي</span>
                                     </td>
-                                </t>
+                                </t>-->
                             </tr>
                             <tr>
                                 <td class="second_table left_column">
